@@ -1,3 +1,8 @@
+2010-05-31  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tkMain.c:  Fix CYGWIN warning: "fd_set and assiciated.macros
+	have been defined in sys/types. This may cause runtime problems with W32"
+
 2010-05-20  Donal K. Fellows  <dkf@users.sf.net>
 
 	* win/tkWinX.c (HandleIMEComposition): [Bug 2992129]: Ensure that all
